# nutriscore-self-assessment

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  compose.override.yml  compose.prod.yml  compose.yml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  survey.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
migrations/: 0_create_submissions.sql
src/hsr/application/: hsr.py  hsr_mapping.py  hsr_scoring.py
src/hsr/domain/: hsr.py
src/hsr/interface/: __init__.py
src/hsr/interface/api/: main.py
src/hsr/interface/schemas/: hsr.py
src/nutri/: __init__.py  settings.py
src/nutri/application/: hsr.py  hsr_mapping.py  hsr_scoring.py  nutriscore.py  survey.py
src/nutri/application/ports/: survey_repository.py
src/nutri/application/survey/: schemas.py  service.py
src/nutri/application/workers/: queues.py  redis.py
src/nutri/domain/: hsr.py  nutriscore.py  survey.py
src/nutri/domain/survey/: recommandations.md  (+1 more)
src/nutri/infrastructure/: survey_repository.py
src/nutri/interface/: dependencies.py
tests/: test_error_handling.py  test_hsr.py  test_hsr_bulk.py  test_nutriscore_beverage.py  test_nutriscore_bulk.py  test_nutriscore_general.py
tests/data/: beverages.csv  beverages.json  general_foods.json  sample_hsr_case.csv  sample_hsr_case.json  survey_questions.json  wrong_beverages.csv
tests/survey/: test_schemas.py  test_survey.py
ui/: Dockerfile  app.py  countries.py  hsr.py  nutriscore.py  nutriscore_template.csv  survey.py  survey_schemas.py
(+80 files in other folders)
